tests/paczka1/fuzzy1/20536968.err
Error in line 3: A597 S333 11,7
Error in line 7: 0xV A953 62,1
Error in line 19: 1NUwy A597 14,7
Error in line 14: A597 S7 58,1
Error in line 26: 1NUwy S333 32,4
Error in line 39: 0xV A597 32,00
